# izbushka

./: .readthedocs.yaml  README.md  docker-compose.yml  izbushka.yml  pyproject.toml
clickhouse/: config.xml
docs/source/: api.rst  conf.py  for_contributors.rst  guide.rst  index.rst
izbushka/: __init__.py  __main__.py  base.py  cli.py  entities.py  history_repo.py  migration.py  migrations_generator.py  migrations_loader.py  migrations_repo.py  migrations_service.py  migrator.py  operations.py  protocols.py  sql.py  version.py
tests/: conftest.py  test_history_repo.py  test_izbushka.py  test_migrations_generator.py  test_migrations_loader.py  test_migrations_repo.py  test_migrations_service.py  test_migrator.py  test_sql.py
tests/migrations/v1/data/: populate_events.py
tests/migrations/v1/schema/: create_events.py
tests/migrations/v2/cleanup/: drop_old_events.py
tests/migrations/v2/data/: move_events.py
tests/migrations/v2/schema/: add_entity_and_action_to_events.py
