[tool.poetry]
name = "izbushka"
version = "0.1.0"
description = ""
authors = ["Anton Evdokimov <meowmeowcode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
clickhouse-connect = "^0.4.1"
PyPika = "^0.48.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.991"
black = "^22.10.0"
docker-compose = "^1.29.2"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["izbushka", "tests"]
