[tool.poetry]
name = "izbushka"
version = "0.2.3"
description = ""
authors = ["Anton Evdokimov <meowmeowcode@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
clickhouse-connect = "^0.4.1"
PyPika = "^0.48.9"
PyYAML = "<6"
click = "^8.1.3"
natsort = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.991"
black = "^22.10.0"
ipython = "^8.6.0"
docker-compose = "^1.29.2"
types-PyYAML = "^6.0.12"
flake8 = "^6.0.0"
Sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["izbushka", "tests"]
